# HealthcareAI-NorthAfrica---Antigravity

./: .env.example  .gitignore  ACTIVITY_TRACKING_INTEGRATION.md  API_IMAGE_ANALYZE.md  API_IMAGE_GRADCAM.md  AUTHENTICATION_ENHANCEMENT_COMPLETE.md  AUTHENTICATION_FINAL_STATUS.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  AUTHENTICATION_SYSTEM_COMPLETE.md  CHATBOT_FIX_FINAL.md  CHATBOT_IMPROVEMENTS.md  CODE_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  DEMO_CONFIG.md  DOCKER_TESTING_QUICKSTART.md  DOCUMENT_ACADEMIQUE_COMPLET.md  DOCUMENT_ACADEMIQUE_COMPLET_RESUME.md  Dockerfile  Dockerfile.backup  FINAL_PRODUCTION_STATUS.md  FRONTEND_AUTH_IMPLEMENTATION_SUMMARY.md  GRADCAM_IMPLEMENTATION.md  IMPLEMENTATION_PROGRESS.md  MODELS_ARCHITECTURE_DOCUMENTATION.md  PHASE_2_COMPLETE.md  QUICK_START.md  README.md  RPPG_DOCUMENTATION.md  RUNNING.md  TASK_1.4_IMPLEMENTATION_SUMMARY.md  TASK_9.2_IMPLEMENTATION_SUMMARY.md  VECTOR_SEARCH_COMPLETE.md  alembic.ini  chatbox_match_1.json  chatbox_match_all_1.json  chatbox_match_all_10.json  chatbox_match_all_11.json  chatbox_match_all_12.json  chatbox_match_all_3.json  chatbox_match_all_4.json  (+96 more)
alembic/: MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MIGRATION_TEST_RESULTS.md  README.md  env.py
assets/: index-Bsb0ELGM.css  index-BuMZ0aIf.js  index-DkL804eC.js  index-F31xZail.css
backend_examples/: accounts_api.py  ledger_api_example.py  requirements.txt  subscriptions_api.py
chunks/: chunk_0.json  chunk_1.json  chunk_10.json  chunk_11.json  chunk_12.json  chunk_13.json  chunk_14.json  chunk_15.json  chunk_16.json  chunk_17.json  chunk_18.json  chunk_19.json  chunk_2.json  chunk_20.json  chunk_21.json  chunk_22.json  chunk_23.json  chunk_24.json  chunk_25.json  chunk_26.json  chunk_27.json  chunk_28.json  chunk_29.json  chunk_3.json  chunk_30.json  chunk_31.json  chunk_32.json  chunk_33.json  chunk_34.json  chunk_35.json  chunk_36.json  chunk_37.json  chunk_38.json  chunk_39.json  chunk_4.json  chunk_40.json  chunk_41.json  chunk_42.json  chunk_43.json  chunk_44.json  (+36 more)
configs/: config.yaml
data/: datasets_info.json  medical_knowledge_ar.json  medical_knowledge_fr.json
database/: README.md  api_examples.md  sql_samples.sql  v1_schema.sql
docs/: AUTHENTICATION_API.md  AUTHENTICATION_SETUP.md  CI_CD_INTEGRATION.md  DEPLOYMENT_CHECKLIST.md  EVALUATION_FRAMEWORK_COMPLETE.md  GETTING_STARTED.md  MODEL_ARCHITECTURE.md  PHASE3_LLM.md  PHASE4_IMAGING.md  PHASE5_DATASET.md  PHASE6_MULTILINGUAL.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md  api_contract.md  openapi.yaml  stripe_webhooks.md
(+242 files in other folders)
